# opengl-sdl

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
core/: CMakeLists.txt  basicshader.cpp  basicshader.hpp  camera.cpp  camera.hpp  gameobject.cpp  gameobject.hpp  light.cpp  light.hpp  material.cpp  material.hpp  materialshader.cpp  materialshader.hpp  mesh.cpp  mesh.hpp  mesh_impl.cpp  normallines.cpp  normallines.hpp  perspectivetransform.cpp  perspectivetransform.hpp  phong.cpp  phong.hpp  phong_dir.cpp  phong_dir.hpp  phongshader.cpp  phongshader.hpp  rendermanager.cpp  rendermanager.hpp  resourcemanager.cpp  resourcemanager.hpp  sdl_gl_application.cpp  sdl_gl_application.hpp  shaderloader.cpp  shaderloader.hpp  shadowmapshader.cpp  shadowmapshader.hpp  simpleshader.cpp  simpleshader.hpp  texture.cpp  texture.hpp  (+10 more)
gl3w/: CMakeLists.txt  README.rst  SConstruct  gl3w_gen.py
gl3w/src/: gl3w.c
glm/detail/: setup.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x3.inl  type_mat2x4.hpp  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x3.inl  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x2.inl  type_mat4x3.hpp  type_mat4x3.inl  type_mat4x4.hpp  type_mat4x4.inl  type_vec1.hpp  type_vec1.inl  type_vec2.hpp  type_vec2.inl  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl
glm/gtc/: quaternion.hpp  quaternion.inl
glm/gtx/: dual_quaternion.hpp  dual_quaternion.inl
meshes/: nord_room_04.mtl  test_scene.dae
modules/: FindSDL2.cmake
shaders/: cube.frag  cube.vert  data_pass.vert  indexed_tri.frag  indexed_tri.vert  light_shadow_f.glsl  light_shadow_v.glsl  normal_f.glsl  normal_v.glsl  phong.frag  phong.vert  phong2.frag  phong2.vert  phong3.frag  phong_dir.frag  phong_dir.vert  phong_dir2.frag  phong_dir2.vert  phong_world.frag  phong_world.vert  shadow_map.frag  shadow_map.vert  simple_f.glsl  simple_v.glsl  texture_shader.frag  texture_shader.vert  texture_shader1.frag  texture_shader1.vert  texture_shader_f.glsl  transform.frag  transform.vert  triangle.fs  triangle.vert  triangle.vs  triangle_tex.frag  triangle_tex.vert  two_pass_shadow.frag  two_pass_shadow.vert
tests/: CMakeLists.txt
tests/ambient_light/: CMakeLists.txt  ambient_light.cpp
tests/assimp_test/: CMakeLists.txt  assimp_test.cpp
tests/assimp_test2/: CMakeLists.txt  assimp_test2.cpp
tests/assimp_test3/: CMakeLists.txt  assimp_test3.cpp
tests/assimp_test4/: CMakeLists.txt  assimp_test4.cpp
tests/basic_scene/: CMakeLists.txt  basic_scene.cpp
tests/cloth/: CMakeLists.txt  cloth.cpp
tests/depth_texture/: CMakeLists.txt  depthtexture.cpp
tests/dir_light/: CMakeLists.txt  dir_light.cpp
tests/indexed_triangle/: CMakeLists.txt  indexed_triangle.cpp
tests/light_test/: CMakeLists.txt  light_test.cpp
tests/model_test/: CMakeLists.txt  model_test.cpp
tests/multitex/: CMakeLists.txt  multitex.cpp  multitex1.cpp
tests/point_light/: CMakeLists.txt  point_light.cpp
tests/pointlight/: CMakeLists.txt  pointlight.cpp
tests/render_to_texture/: CMakeLists.txt  rendertotexture.cpp  rendertotexture1.cpp
tests/shadow_mapping/: CMakeLists.txt  shadowmapping.cpp
tests/singlepoint/: CMakeLists.txt  singlepoint.cpp
tests/skybox/: CMakeLists.txt  skybox.cpp
tests/texture_test/: triangle_tex.cpp
tests/triangle/: .CMakeLists.txt.swp  CMakeLists.txt  triangle.cpp
tests/triangle_tex/: CMakeLists.txt  triangle_tex.cpp
tests/triangle_transform/: CMakeLists.txt  triangle_transform.cpp
textures/: tquad.mtl
utils/: .objloader.cpp.swp  3dmesh.cpp  3dmesh.h  3dmodel.cpp  3dmodel.h  3dsloader.cpp  3dsloader.h  CMakeLists.txt  aabb3.cpp  aabb3.h  basicmodelloader.cpp  basicmodelloader.h  boundingvolumetree3.cpp  boundingvolumetree3.h  genericloader.cpp  genericloader.h  matrix2x2.cpp  matrix2x2.h  matrix3x3.cpp  matrix3x3.h  matrix4x4.cpp  matrix4x4.h  matrixcsr.cpp  matrixcsr.h  matrixnxn.cpp  matrixnxn.h  mymath.cpp  mymath.h  objloader.cpp  objloader.h  quaternion.cpp  quaternion.h  subdivisioncreator.cpp  subdivisioncreator.h  test.cpp  traits.cpp  traits.h  triangle3.cpp  triangle3.h  triface.cpp  (+9 more)
