add_subdirectory(basic_scene)
add_subdirectory(dir_light)
add_subdirectory(point_light)
add_subdirectory(pointlight)
add_subdirectory(multitex)
add_subdirectory(render_to_texture)
add_subdirectory(depth_texture)
add_subdirectory(skybox)
add_subdirectory(cloth)
add_subdirectory(model_test)
add_subdirectory(assimp_test)
add_subdirectory(assimp_test2)
add_subdirectory(assimp_test3)
add_subdirectory(assimp_test4)
